Fixed wrapping with default columns.

--- a/src/css/components/grid/grid.scss
+++ b/src/css/components/grid/grid.scss
@@ -50,7 +50,7 @@
       }
       flex: 1 0 0;
       max-width: 100%;
-      min-width: 0;
+      min-width: (100% / 12);
       padding: 0 $base-unit;
       position: relative;
     }
@@ -126,6 +126,7 @@
     }
 
     // Reordering
+
     @for $i from 1 through 12 {
       &.-n#{$i} {
         order: #{$i};
